1.20.6 partial port (#372)
This contains a ton of half-ported modules, but due to our difficulties porting we're releasing a version that only contains `qsl_base`, so that we can publish QFAPI. A blog post explaining more will be written and released soon.

Co-authored-by: Eli Orona <eliorona@live.com>
Co-authored-by: moehreag <moehreag@gmail.com>