@@ -29,10 +29,12 @@ import java.util.stream.Collectors;
 
 import it.unimi.dsi.fastutil.objects.Object2IntMap;
 import it.unimi.dsi.fastutil.objects.Object2IntOpenHashMap;
+import net.minecraft.network.codec.PacketCodec;
 import org.jetbrains.annotations.ApiStatus;
 
 import net.minecraft.network.PacketByteBuf;
 import net.minecraft.network.packet.Packet;
+import net.minecraft.network.packet.payload.CustomPayload;
 import net.minecraft.registry.Registries;
 import net.minecraft.registry.Registry;
 import net.minecraft.util.Identifier;
@@ -49,8 +51,6 @@ import org.quiltmc.qsl.registry.impl.sync.registry.SynchronizedRegistry;
 @ApiStatus.Internal
 public class ServerFabricRegistrySync {
 	private static final int MAX_PAYLOAD_SIZE = 1048576;
-	public static final Identifier SYNC_COMPLETE_ID = new Identifier("fabric", "registry/sync/complete");
-	public static final Identifier ID = new Identifier("fabric", "registry/sync/direct");
 
 	public static void sendSyncPackets(Consumer<Packet<?>> sender) {
 		var registryMap = createRegistryMap();
@@ -96,7 +96,7 @@ public class ServerFabricRegistrySync {
 					while (idPairIter.hasNext()) {
 						currentPair = idPairIter.next();
 
-						if (currentBulk.get(currentBulk.size() - 1).getIntValue() + 1 != currentPair.getIntValue()) {
+						if (currentBulk.getLast().getIntValue() + 1 != currentPair.getIntValue()) {
 							bulks.add(currentBulk);
 							currentBulk = new ArrayList<>();
 						}
@@ -110,7 +110,7 @@ public class ServerFabricRegistrySync {
 					buf.writeVarInt(bulks.size());
 
 					for (List<Object2IntMap.Entry<Identifier>> bulk : bulks) {
-						int firstRawId = bulk.get(0).getIntValue();
+						int firstRawId = bulk.getFirst().getIntValue();
 						int bulkRawIdStartDiff = firstRawId - lastBulkLastRawId;
 
 						buf.writeVarInt(bulkRawIdStartDiff);
@@ -145,7 +145,7 @@ public class ServerFabricRegistrySync {
 	private static Map<Identifier, Object2IntMap<Identifier>> createRegistryMap() {
 		var map = new HashMap<Identifier, Object2IntMap<Identifier>>();
 
-		for (var registry : Registries.REGISTRY) {
+		for (var registry : Registries.ROOT) {
 			if (registry instanceof SynchronizedRegistry<?> synchronizedRegistry
 					&& synchronizedRegistry.quilt$requiresSyncing() && synchronizedRegistry.quilt$getContentStatus() != SynchronizedRegistry.Status.VANILLA) {
 				var idMap = new Object2IntOpenHashMap<Identifier>();
@@ -167,10 +167,47 @@ public class ServerFabricRegistrySync {
 	}
 
 	private static void sendPacket(Consumer<Packet<?>> sender, PacketByteBuf buf) {
-		sender.accept(ServerPlayNetworking.createS2CPacket(ID, buf));
+		sender.accept(ServerPlayNetworking.createS2CPacket(new Payload(buf.array())));
 	}
 
 	private static String optimizeNamespace(String namespace) {
 		return namespace.equals(Identifier.DEFAULT_NAMESPACE) ? "" : namespace;
+	}
+
+	public record Payload(byte[] data) implements CustomPayload {
+		public static CustomPayload.Id<Payload> ID = new Id<>(new Identifier("fabric", "registry/sync/direct"));
+		public static PacketCodec<PacketByteBuf, Payload> CODEC = CustomPayload.create(Payload::write, Payload::new);
+
+		Payload(PacketByteBuf buf) {
+			this(readAllBytes(buf));
+		}
+
+		private void write(PacketByteBuf buf) {
+			buf.writeBytes(data);
+		}
+
+		private static byte[] readAllBytes(PacketByteBuf buf) {
+			byte[] bytes = new byte[buf.readableBytes()];
+			buf.readBytes(bytes);
+			return bytes;
+		}
+
+		@Override
+		public Id<? extends CustomPayload> getId() {
+			return ID;
+		}
+	}
+
+	public static class SyncCompletePayload implements CustomPayload {
+		public static final SyncCompletePayload INSTANCE = new SyncCompletePayload();
+		public static final CustomPayload.Id<?> ID = new CustomPayload.Id<>(new Identifier("fabric", "registry/sync/complete"));
+		public static final PacketCodec<PacketByteBuf, SyncCompletePayload> CODEC = PacketCodec.unit(INSTANCE);
+
+		private SyncCompletePayload() { }
+
+		@Override
+		public Id<? extends CustomPayload> getId() {
+			return ID;
+		}
 	}
 }
